observability/base/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: platform
      namespace: infrastructure
  hostnames:
    - "grafana-${cluster_name}.priv.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
